4909
Oh, and it's in trunk too, albeit with martin's recent error message bonuses.
```scala
scalac29 J.java S.scala 
S.scala:7: error: method f1 in class J cannot be accessed in test.J
  def g1(x: J) = x.f1()
                   ^
S.scala:8: error: method f2 in class J cannot be accessed in test.J
 Access to protected method f2 not permitted because
 enclosing class class S1 in package nest is not a subclass of 
 class J in package test where target is defined
  def g2(x: J) = x.f2()
                   ^
S.scala:12: error: method f1 in class J cannot be accessed in test.J
  def g1(x: J) = x.f1()
                   ^
S.scala:13: error: method f2 in class J cannot be accessed in test.J
 Access to protected method f2 not permitted because
 prefix type test.J does not conform to
  def g2(x: J) = x.f2()
                   ^
four errors found
```
